k8s/base/amazon-searcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazon-searcher
spec:
  type: ClusterIP
  selector:
    app: amazon-searcher
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
