k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - name: web-ui
      port: 3000
  selector:
    app: app
